Fixed xql file manager resource shared bugs in multi opened projects.